--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Engineering Lab</title>
+    <title>Beautiful Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-    <div>
-        
-    </div>
+    <section>
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1> <span class="orange-highlight">Our</span>  World!</h1>
+            <h3>World-class professional Web-dev</h4>
+            <p>Hi everyone to my webpage! We always try to built a professional website. So, don't take too much time, let's go forward. This website is made on just basics but if you hire us we will definitly try to build you a desire website though!!!!!!</p>
+        </div>
+        <div class="half-width">
+            <img src="images/profile.png" alt="">
+        </div>
+    </section>
+    
 </body>
 </html>
